在3D PROCESS中实现文件上传，同时上传之后显示图片

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,12 @@ server:
   ip: 172.18.26.71
   port: 8081
 
+spring:
+  servlet:
+    multipart:
+      max-file-size: 100MB #最大文件大小
+      max-request-size: 500MB #最大请求大小
+
 files:
   upload:
     path: C:/HJL/Code Project/saas/medical_image/data_upload/
